# pre-commit-templates

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/pre_commit_templates/: __init__.py  app.py  configs.py  files.py  git.py  version.py
tests/: test_configs.py  test_git.py
